# crew-ai

agile_sdlc_crew/: .env.example  .gitignore  CLAUDE.md  README.md  homebrew.mxcl.agile-sdlc-crew.plist  pyproject.toml  start.sh
agile_sdlc_crew/src/agile_sdlc_crew/: credentials.py  crew.py  dashboard.py  db.py  flow.py  hal_client.py  kickoff_grader.py  kickoff_guidance.py  kickoff_sections.py  main.py  pipeline.py  pipeline_config.py  pr_fix.py  server.py
agile_sdlc_crew/src/agile_sdlc_crew/config/: agent_llm_overrides.yaml  agents.yaml  embed_config.yaml  llm_profiles.yaml  pipeline_config.yaml  tasks.yaml  vision_config.yaml  work_item_config.yaml
agile_sdlc_crew/src/agile_sdlc_crew/embed/: __init__.py  registry.py  resolver.py
agile_sdlc_crew/src/agile_sdlc_crew/knowledge/: __init__.py  agile_facilitation.md  backend_code_review.md  backend_feature_dev.md  backend_tech_design.md  frontend_nextjs.md  requirements_analysis.md  testing_strategy.md  uat_strategy.md
agile_sdlc_crew/src/agile_sdlc_crew/llm/: __init__.py  registry.py  resolver.py
agile_sdlc_crew/src/agile_sdlc_crew/providers/: __init__.py  azure_devops.py  base.py  factory.py  registry.py  resolver.py
agile_sdlc_crew/src/agile_sdlc_crew/tools/: __init__.py  azure_devops_add_comment.py  azure_devops_base.py  azure_devops_browse_repo.py  azure_devops_get_work_item.py  azure_devops_git_write.py  azure_devops_list_repos.py  azure_devops_list_work_items.py  azure_devops_read_file.py  azure_devops_search_code.py  azure_devops_update_work_item.py  claude_cli_llm.py  code_read_tool.py  code_write_tool.py  (+6 more)
(+17 files in other folders)
